--- a/app/views/projects/_redmine_gitolite.html.erb
+++ b/app/views/projects/_redmine_gitolite.html.erb
@@ -4,7 +4,18 @@
 
     <p>
       <% if User.current.allowed_to?(:view_changesets, @project) %>
-        <strong>Read Only URL:</strong><br />
+        <strong><%= l(:label_git_browse_access) %> :</strong><br />
+        <ul>
+          <% @project.repositories.select{|r| r.is_a?(Repository::Git)}.each do |repo| %>
+            <li><%= link_to repo.gitolite_browse_url, repo.gitolite_browse_url %></li>
+          <% end %>
+        </ul>
+      <% end %>
+    </p>
+
+    <p>
+      <% if User.current.allowed_to?(:view_changesets, @project) %>
+        <strong><%= l(:label_git_http_access) %> :</strong><br />
         <ul>
           <% @project.repositories.select{|r| r.is_a?(Repository::Git)}.each do |repo| %>
             <li><%= link_to repo.gitolite_http_url, repo.gitolite_http_url %></li>
@@ -15,7 +26,7 @@
 
     <p>
       <% if User.current.allowed_to?(:commit_access, @project) %>
-        <strong>Developer URL:</strong><br />
+        <strong><%= l(:label_git_ssh_access) %> :</strong><br />
         <ul>
           <% @project.repositories.select{|r| r.is_a?(Repository::Git)}.each do |repo| %>
             <li><%= link_to repo.gitolite_git_url %></li>
