--- a/app/views/repositories/_sidebar_git_info.html.erb
+++ b/app/views/repositories/_sidebar_git_info.html.erb
@@ -2,7 +2,7 @@
 
 <h3><%= l(:label_git_repository_info) %> :</h3>
   <div id="git_info">
-    <%= l(:label_git_read_access) %> : <pre class="autoscroll"><%= @repository.gitolite_http_url %></pre>
+    <%= l(:label_git_http_access) %> : <pre class="autoscroll"><%= link_to @repository.gitolite_http_url, @repository.gitolite_http_url %></pre>
     <%= l(:label_git_ssh_access) %> : <pre class='autoscroll'><%= @repository.gitolite_git_url %></pre>
   </div>
 
