--- a/app/views/settings/_gitolite_settings.html.erb
+++ b/app/views/settings/_gitolite_settings.html.erb
@@ -9,6 +9,8 @@
   gitoliteAllProjectsUseGit            = (!Setting.plugin_redmine_gitolite.nil? and !Setting.plugin_redmine_gitolite[:gitoliteAllProjectsUseGit].nil?) ? Setting.plugin_redmine_gitolite[:gitoliteAllProjectsUseGit] : true
   gitoliteRecycleBinDeleteRepositories = (!Setting.plugin_redmine_gitolite.nil? and !Setting.plugin_redmine_gitolite[:gitoliteRecycleBinDeleteRepositories].nil?) ? Setting.plugin_redmine_gitolite[:gitoliteRecycleBinDeleteRepositories] : true
   gitoliteRecycleBinExpireTime         = (!Setting.plugin_redmine_gitolite.nil? and !Setting.plugin_redmine_gitolite[:gitoliteRecycleBinExpireTime].nil?) ? Setting.plugin_redmine_gitolite[:gitoliteRecycleBinExpireTime] : '24.0'
+  gitoliteDefaultSmartHttp             = (!Setting.plugin_redmine_gitolite.nil? and !Setting.plugin_redmine_gitolite[:gitoliteDefaultSmartHttp].nil?) ? Setting.plugin_redmine_gitolite[:gitoliteDefaultSmartHttp] : true
+  gitoliteDefaultGitDaemon             = (!Setting.plugin_redmine_gitolite.nil? and !Setting.plugin_redmine_gitolite[:gitoliteDefaultGitDaemon].nil?) ? Setting.plugin_redmine_gitolite[:gitoliteDefaultGitDaemon] : true
 %>
 
 <p>
@@ -16,6 +18,23 @@
   <%= select_tag("settings[gitoliteAllProjectsUseGit]", options_for_select([[l(:label_enabled), 'true'], [l(:label_disabled), 'false']], gitoliteAllProjectsUseGit)) %>
   <br />
 </p>
+
+<br />
+
+<p>
+  <label><%= l(:label_gitolite_all_projects_use_git)%></label>
+  <%= select_tag("settings[gitoliteDefaultSmartHttp]", options_for_select([[l(:label_enabled), 'true'], [l(:label_disabled), 'false']], gitoliteDefaultSmartHttp)) %>
+  <br />
+</p>
+
+<br />
+
+<p>
+  <label><%= l(:label_gitolite_all_projects_use_git)%></label>
+  <%= select_tag("settings[gitoliteDefaultGitDaemon]", options_for_select([[l(:label_enabled), 'true'], [l(:label_disabled), 'false']], gitoliteDefaultGitDaemon)) %>
+  <br />
+</p>
+
 
 <br />
 <hr />
